[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runpod_manager"
version = "0.1.0"
description = "A Python package for managing RunPod instances across projects"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Smart Social Contracts", email = "contact@smartsocialcontracts.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "runpod",
]

[project.urls]
Homepage = "https://github.com/smart-social-contracts/runpod_manager"
Repository = "https://github.com/smart-social-contracts/runpod_manager"
Issues = "https://github.com/smart-social-contracts/runpod_manager/issues"

[project.scripts]
runpod-manager = "runpod_manager.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["runpod_manager*"]
